Added Better usablilty and examples.

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
         <meta name='description' content='<%= htmlWebpackPlugin.options.description %>'>
     </head>
     <body>
-        <div id='app-container'></div>
+        <div class="full" id='app-container'></div>
     </body>
 
 </html>
